--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Pokemon API to store Pokemon and Items",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.6.13",
     "swagger-jsdoc": "^3.4.0",
